# python-ansible-manager

./: .gitignore  AGENTS.md  README.md  ansiblecli.sh  pyproject.toml
ansiblecli/: __main__.py  cli.py  config.py  database.py  discover.py  interactive.py  inventory.py  machinesetup.py  picker.py  runner.py
ansiblecli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inventory/: hosts.yml
playbooks/: apt-cache.yml  apt-clean.yml  backup.yml  basics.yml  becomepass  buildessentials.yml  defaultTask.sh  deploy_remote_backup.yml  do_not_use_openssh_config.yml  edithosts.sh  grafana.yml  install_Prometheus.yaml  install_VNCServer.yml  install_docker.yml  install_jellyfin.yml  install_nextcloud.yaml  install_node_exporter.yaml  install_qemu.yml  install_snap.yml  install_tvheadend.yml  mymcadmin.yml  newMachineSetup.sh  newopenssh_config.yml  openssh_config.yml  ransible.sh  reboot.yml  removeSalt.yml  set_hostname.yml  setup_kiosk.yml  setup_kiosk.ymlOLD  shairport-sync.yml  sshsetup.sh  ssmtp-cronlogs.yml  sudo.yml  testCommandUnattended  unattendedInstall.yml  windows_basics.yml
playbooks/desktop-setup/: playbook.yml
playbooks/nextcloud_instances/LenovoServer.dadisman/: db_admin.pwd  mysql_root.pwd  web_admin.pwd
playbooks/server-provision/: playbook.yml
