[project]
name = "ansiblecli"
version = "0.1.0"
description = "Interactive CLI for managing and running Ansible playbooks"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ansiblecli = "ansiblecli.cli:app"

[tool.setuptools.packages.find]
include = ["ansiblecli*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
